--- a/javascript/javascript1/week1/index-JS1-1-hw.html
+++ b/javascript/javascript1/week1/index-JS1-1-hw.html
@@ -10,8 +10,8 @@
 
 <title>HOMEWORK JS1-1 week-05 </title>
 
-<link rel="stylesheet" href="main-JS1-1-hw.css">
-<script type="text/javascript" src="main-JS1-1-hw.js"></script>
+<link rel="stylesheet" href="maincss-JS1-1-hw.css">
+<script type="text/javascript" src="mainjs-JS1-1-hw.js"></script>
 
 <body>
   <h1>HOMEWORK JS1-1 week-05 by Magdalena /HYF /class 12</h1>
