--- a/javascript/javascript2/week1/index-JS2-1-hw.html
+++ b/javascript/javascript2/week1/index-JS2-1-hw.html
@@ -31,14 +31,32 @@
 
   <!-- <p> My codeCamp profile is <a href="https://www.freecodecamp.org/mag-da-lenka">here.</a></p> -->
 
-  <p> </p>
 
+  <h2>1. Find the shortest word - done.</h2>
+
+  <h2>2. Difference between median and average - done.</h2>
+
+  <h2>3. Spirit animal name generator -done.</h2>
+
+
+
+  <p>
+    <!-- <label for="typedName"> Type your name and press the button to generate your spirit animal.</label> -->
+    <input type="text" id="typedName" placeholder="type your human name">
+  </p>
+
+  <p> 
+    <button id="animalize-button">animalizer</button> 
+  </p>
+
+  <p id="result-displayed"></p>
+
+
+
+  <h2> 4. [...]</h2>
 
 
   <br>
-
-
-
   <script type="text/javascript" src="script-JS2-1-hw.js"></script>
 
 </body>
