--- a/javascript/javascript2/week1/hyfBay1-index.html
+++ b/javascript/javascript2/week1/hyfBay1-index.html
@@ -10,7 +10,7 @@
 
     <header>
       <div class="wrapper">
-        <h1>HyfBay</h1>
+        <h1>HyfBay 1</h1>
         <h2>- Buy the okay'est products</h2>
       </div>
     </header>
