--- a/javascript/javascript2/week2/index-JS2-2-hw.html
+++ b/javascript/javascript2/week2/index-JS2-2-hw.html
@@ -14,19 +14,10 @@
 
 
 
-
-
-
-
-
-
-
-
-
 <body>
 
 
-    <h1>HOMEWORK JS2-2 week-10 <br> by Magdalena /HYF /class 12</h1>
+    <h1>HOMEWORK ---> clean version <br> JS2-2 week-10 <br> by Magdalena /HYF /class 12</h1>
     <br>
 
     <!-- <p> My codeCamp profile is <a href="https://www.freecodecamp.org/mag-da-lenka">here.</a></p> -->
