fixing house number label

--- a/corona-hackathon-group-6/index1.html
+++ b/corona-hackathon-group-6/index1.html
@@ -76,7 +76,7 @@
                         placeholder="insert street address" required>
                 </div>
                 <div class="columns-2">
-                    <label for="address-house-number">Street address *</label>
+                    <label for="address-house-number">House number *</label>
                     <input type="text" class="input-required" id="address-house-number" name="address-house-number"
                         placeholder="insert house number" required>
                 </div>
