senior-friendly-form

--- a/corona-hackathon-group-6/index1.html
+++ b/corona-hackathon-group-6/index1.html
@@ -73,7 +73,7 @@
                 <div class="columns-2">
                     <label for="address-street-name">Street: *</label>
                     <input type="text" class="input-required" id="address-street-name" name="address-street-name"
-                        placeholder="insert street address" required>
+                        placeholder="insert street name" required>
                 </div>
                 <div class="columns-2">
                     <label for="address-house-number">House number *</label>
